# gapfinder-ai

./: AI_GENERATION_GUIDE.md  AI_IMPLEMENTATION_SUMMARY.md  BACKEND_README.md  COMPONENT_SPEC.md  CRITICAL_FLOWS.md  DESIGN_SPEC.md  GEMINI_SETUP.md  GETTING_STARTED.md  INTEGRATION_SUMMARY.md  PHARMACY_FEATURES.md  PROJECT_SUMMARY.md  README.md  create-icon.ps1  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  fsrs.rs  main.rs  models.rs
src/api/: index.ts
src/components/: CommandPalette.tsx  QuickLearn.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/ui/: command.tsx  toast.tsx
src/lib/: utils.ts
src/pages/: Analytics.tsx  Concepts.tsx  Home.tsx  Import.tsx  Items.tsx  Learn.tsx  Settings.tsx
src/store/: index.ts
src/types/: index.ts
