[package]
name = "gapfinder-ai"
version = "0.1.0"
description = "Knowledge Gap Finder for Professional Learning"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
csv = "1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
